kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - mummigang.shapingideas.fyi
    secretName: tls
  rules:
  - host: mummigang.shapingideas.fyi
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 80
